[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://images/player/body.png" type="Texture" id=2]
[ext_resource path="res://images/player/empty_arm.png" type="Texture" id=3]
[ext_resource path="res://weapon_swing_animation.tres" type="SpriteFrames" id=4]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13, 46 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 44 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24, 44 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="WeaponArmSpriteBack" type="AnimatedSprite" parent="."]
position = Vector2( 16, -6 )
frames = ExtResource( 4 )
animation = "Idle"

[node name="BodySprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="EmptyArmSprite" type="Sprite" parent="."]
position = Vector2( 2, -1 )
texture = ExtResource( 3 )

[node name="WeaponArmSpriteFront" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -15, -7 )
scale = Vector2( -1, 1 )
frames = ExtResource( 4 )
animation = "WeaponSwing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="WeaponAreaLeft" type="Area2D" parent="."]
position = Vector2( -24, 0 )
collision_mask = 4
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponAreaLeft"]
shape = SubResource( 4 )

[node name="WeaponAreaRight" type="Area2D" parent="."]
position = Vector2( 24, 0 )
collision_mask = 4
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponAreaRight"]
shape = SubResource( 5 )

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -96 )
current = true

[connection signal="animation_finished" from="WeaponArmSpriteBack" to="." method="_on_WeaponArmSpriteBack_animation_finished"]
[connection signal="animation_finished" from="WeaponArmSpriteFront" to="." method="_on_WeaponArmSpriteFront_animation_finished"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]
